--- a/LibraryManagment/MainWindow.xaml
+++ b/LibraryManagment/MainWindow.xaml
@@ -6,83 +6,97 @@
         xmlns:local="clr-namespace:LibraryManagment"
         mc:Ignorable="d"
         Title="MainWindow" MinHeight="600" MinWidth="900" ResizeMode="NoResize"
-        WindowStartupLocation="CenterScreen">
+        WindowStartupLocation="CenterScreen"
+        WindowStyle="None"
+        AllowsTransparency="True"
+        Background="Transparent"
+        >
 
-    <Grid Focusable="True" ScrollViewer.CanContentScroll="True">
-
+    <Grid Margin="15">
+        <Grid.Effect>
+            <DropShadowEffect BlurRadius="10" Direction="265" Opacity="0.475" ShadowDepth="4"/>
+        </Grid.Effect>
         <Grid.RowDefinitions>
-            <RowDefinition Height="180"/>
+            <RowDefinition Height="170"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="16.8"/>
-            <ColumnDefinition Width="35.2"/>
-            <ColumnDefinition Width="168"/>
-            <ColumnDefinition Width="200*"/>
-            <ColumnDefinition Width="162*"/>
-            <ColumnDefinition Width="37*"/>
-            <ColumnDefinition Width="156*"/>
-            <ColumnDefinition Width="18*"/>
-            <ColumnDefinition Width="90*"/>
-            <ColumnDefinition Width="17*"/>
+            <ColumnDefinition Width="220"/>
+            <ColumnDefinition/>
         </Grid.ColumnDefinitions>
 
-        <!--Logo and button-->
-        <Border Background="#134187" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3">
+        <!--Logo and Buttons-->
+        <Border Background="#134187" Grid.Column="0" Grid.Row="0" >
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="35" />
-                    <RowDefinition/>
-
+                    <RowDefinition Height="35"/>
+                    <RowDefinition />
                 </Grid.RowDefinitions>
+
                 <Border Grid.Row="0">
-                    <DockPanel>
-                        <Image Source="/images/icon/flatIcon.png" Width="25" Height="25" />
-                        <Label Content="KÜTÜPHANE PROGRAMI" Foreground="White" FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" />
+                    <DockPanel VerticalAlignment="Center" HorizontalAlignment="Center">
+                        <Image Source="/images/icon/book1.png" Height="16" Width="16"/>
+                        <Label Content="KÜTÜPHANE PROGRAMI" Foreground="White" FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
                     </DockPanel>
                 </Border>
 
                 <Border Grid.Row="1">
-                    <DockPanel>
+
+                    <Border.Style>
+                        <Style TargetType="Border">
+                            <Setter Property="Background" Value="#134187"/>
+                            <Style.Triggers>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter Property="Background" Value="#3F5F96CF"/>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Border.Style>
+
+                    <DockPanel VerticalAlignment="Center" HorizontalAlignment="Center">
                         <Image>
                             <Image.Style>
                                 <Style TargetType="Image">
                                     <Setter Property="Source" Value="/images/icon/documentAdd.png"/>
-                                    <Setter Property="Height" Value="auto" />
+                                    <Setter Property="Height" Value="auto"/>
                                     <Setter Property="Width" Value="100"/>
                                     <Style.Triggers>
-                                        <Trigger Property="IsMouseOver" Value="true">
+                                        <Trigger Property="IsMouseOver" Value="True">
                                             <Setter Property="Source" Value="/images/icon/documentAddWhite.png"/>
-                                            <Setter Property="Width" Value="105"/>
+                                            <Setter Property="Width" Value="110"/>
                                         </Trigger>
                                     </Style.Triggers>
+
                                 </Style>
                             </Image.Style>
                         </Image>
+
                     </DockPanel>
                 </Border>
+
+
             </Grid>
         </Border>
-        <Border Background="#FFFFFFFF" Grid.Column="3" Grid.Row="0" Grid.ColumnSpan="7">
-        </Border>
 
-        <!--Mini buttons and title-->
-        <Border Background="#134187" Grid.Row="0" Grid.Column="3" Grid.ColumnSpan="7" x:Name="top_border" MouseDown="top_border_MouseDown" IsEnabled="False">
-            <Grid MouseDown="Grid_MouseDown">
+        <!--Mini Buttons and header-->
+        <Border Background="#134187" Grid.Column="1" Grid.Row="0"  x:Name="Grid" MouseDown="Grid_MouseDown">
+            <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="35" />
-
-                    <RowDefinition/>
-
+                    <RowDefinition Height="35"/>
+                    <RowDefinition />
                 </Grid.RowDefinitions>
-                <Border Grid.Row="0" Background="White">
+                <Border Background="White" Grid.Row="0">
                     <DockPanel Width="72" HorizontalAlignment="Right">
-                        <Button Content="_"  Style="{DynamicResource mini-buttons}" />
-                        <Button Content="X" x:Name="btn_close" Click="btn_close_Click" Style="{DynamicResource mini-buttons}"/>
+                        <Button Content="__" Style="{DynamicResource minibutonlar}" FontSize="12" />
+                        <Button Content="X"  x:Name="btn_close" Click="btn_close_Click" Style="{DynamicResource minibutonlar}" FontSize="12"/>
                     </DockPanel>
                 </Border>
+                <Border Grid.Row="1"  Background="#134187" >
+                    <Border.Effect>
+                        <DropShadowEffect Direction="221" Opacity="0.2"/>
+                    </Border.Effect>
 
-                <Border Grid.Row="1" Background="Transparent">
+
                     <Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition/>
@@ -90,68 +104,109 @@
                         </Grid.ColumnDefinitions>
 
                         <Border Grid.Column="0">
+
                             <Border.Background>
                                 <ImageBrush ImageSource="/images/windows/windowBottom.png"/>
                             </Border.Background>
-
                             <StackPanel VerticalAlignment="Center" Margin="30,0,0,0">
-                                <Label Content="Hoşgeldiniz" Foreground="White"/>
+                                <DockPanel>
+                                    <Label Content="Toplam Kitap Sayısı :" Foreground="White" FontSize="18"/>
+                                    <Label Content="1024" Foreground="#FF33FD45" FontSize="18"/>
+                                </DockPanel>
+                                <StackPanel Orientation="Horizontal">
+                                    <DockPanel>
+                                        <Label Content="Emanet :" Foreground="White" FontSize="14"/>
+                                        <Label Content="124" Foreground="#FF33FD45" FontSize="14"/>
+                                    </DockPanel>
+                                    <DockPanel>
+                                        <Label Content="Süresi Dolan :" Foreground="White" FontSize="14"/>
+                                        <Label Content="14" Foreground="#FFFD8787" FontSize="14"/>
+                                    </DockPanel>
+                                </StackPanel>
+
                             </StackPanel>
+
                         </Border>
 
                         <Border Grid.Column="1">
                             <Border.Background>
-                                <ImageBrush ImageSource="/images/windows/windowBottom.png"/>
+                                <ImageBrush ImageSource="/images/windows/windowRight.png"/>
                             </Border.Background>
+                            <Border Width="220" Height="120" CornerRadius="10,10,10,10" Background="#4C08316E">
+                                <StackPanel Orientation="Horizontal">
+                                    <Image Source="/images/icon/person.png" Width="100"/>
+                                    <StackPanel VerticalAlignment="Center" Margin="3,0,0,0">
+                                        <Label Content="Ahmet OKU" Background="#FF84A7F1" Foreground="White" FontWeight="Bold"/>
+                                        <Label Content="Yönetici" Background="#FF224059" Foreground="White" FontWeight="Bold"/>
+                                    </StackPanel>
+                                </StackPanel>
+                            </Border>
+
                         </Border>
+
                     </Grid>
                 </Border>
+
 
             </Grid>
         </Border>
 
-        <!--Sidebar-->
-        <Border Background="#134187" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3">
-
-            <StackPanel>
-                <Button Height="50" Style="{DynamicResource menu-buttons}">
-                    <DockPanel>
-                        <Image Source="/images/icon/bookList.png" Width="32" OpacityMask="White"/>
-                        <Label Content="Kitap Listesi" Foreground="White"/>
+        <!--Menu Buttons and header-->
+        <Border Background="#134187" Grid.Column="0" Grid.Row="1" >
+            <StackPanel >
+                <Button Height="50" Style="{DynamicResource menubutonlar}" HorizontalContentAlignment="Left" x:Name="menubutton_booklist" Click="menubutton_booklist_Click">
+                    <DockPanel Width="220" Margin="15,0,0,0" >
+                        <Image Source="/images/icon/books.png" Width="32"/>
+                        <Label Content="Kitap Listesi" Foreground="White" FontSize="16"/>
                     </DockPanel>
                 </Button>
-
-                <Button Height="50" Style="{DynamicResource menu-buttons}">
-                    <DockPanel>
-                        <Image Source="/images/icon/memberList.png" Width="32" OpacityMask="White"/>
-                        <Label Content="Okuyucu Listesi" Foreground="White"/>
+                <Button Height="50" Style="{DynamicResource menubutonlar}">
+                    <DockPanel Width="220" Margin="15,0,0,0">
+                        <Image Source="/images/icon/memberList.png" Width="32"/>
+                        <Label Content="Okuyucu Listesi" Foreground="White" FontSize="16"/>
                     </DockPanel>
                 </Button>
-
-                <Button Height="50" Style="{DynamicResource menu-buttons}">
-                    <DockPanel>
-                        <Image Source="/images/icon/books.png" Width="32" OpacityMask="White"/>
-                        <Label Content="Emanet Listesi" Foreground="White"/>
+                <Button Height="50" Style="{DynamicResource menubutonlar}">
+                    <DockPanel Width="220" Margin="15,0,0,0">
+                        <Image Source="/images/icon/book1.png" Width="32"/>
+                        <Label Content="Emanet Listesi" Foreground="White" FontSize="16"/>
                     </DockPanel>
                 </Button>
-
-                <Button Height="50" Style="{DynamicResource menu-buttons}">
-                    <DockPanel>
-                        <Image Source="/images/icon/bookList.png" Width="32" OpacityMask="White"/>
-                        <Label Content="Zamanı Dolanlar" Foreground="White"/>
+                <Button Height="50" Style="{DynamicResource menubutonlar}">
+                    <DockPanel Width="220" Margin="15,0,0,0">
+                        <Image Source="/images/icon/overdueItems.png" Width="32"/>
+                        <Label Content="Zamanı Dolanlar" Foreground="White" FontSize="16"/>
                     </DockPanel>
                 </Button>
-
-                <Button Height="50" Style="{DynamicResource menu-buttons}">
-                    <DockPanel>
-                        <Image Source="/images/icon/overdueItems.png" Width="32" OpacityMask="White"/>
-                        <Label Content="Hakkında" Foreground="White"/>
+                <Button Height="50" Style="{DynamicResource menubutonlar}">
+                    <DockPanel Width="220" Margin="15,0,0,0">
+                        <Image Source="/images/icon/books.png" Width="32"/>
+                        <Label Content="Kitap Listesi" Foreground="White" FontSize="16"/>
                     </DockPanel>
                 </Button>
-                <Image Source="/images/windows/windowBottom.png" />
-                <Canvas Height="25" Width="60" RenderTransformOrigin="1.37,-2.148">
-                    <Border>
-                        <Label Content="10.0.0.1"/>
+                <Button Height="50" Style="{DynamicResource menubutonlar}">
+                    <DockPanel Width="220" Margin="15,0,0,0">
+                        <Image Source="images/icon/book1.png" Width="32"/>
+                        <Label Content="Hakkında" Foreground="White" FontSize="16"/>
+                    </DockPanel>
+                </Button>
+                <Image Source="/images/windows/windowBottom.png" Height="133" Panel.ZIndex="-99" Margin="0,-25,0,0"/>
+
+                <Canvas>
+                    <Border Canvas.Left="69" Canvas.Top="-57"  CornerRadius="10,10,10,10" Cursor="Hand">
+                        <Label Content="10.0.0.1" Foreground="White" Width="71" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" />
+
+                        <Border.Style>
+                            <Style TargetType="Border">
+                                <Setter Property="Background" Value="#99053D76"/>
+                                <Style.Triggers>
+                                    <Trigger Property="IsMouseOver" Value="True">
+                                        <Setter Property="Background" Value="#FF053D76"/>
+                                    </Trigger>
+                                </Style.Triggers>
+                            </Style>
+                        </Border.Style>
+
                     </Border>
                 </Canvas>
 
@@ -159,54 +214,15 @@
 
 
             </StackPanel>
+
         </Border>
-        <Border Background="#134187" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3">
 
-            <StackPanel>
-                <Button Height="50" Style="{DynamicResource menu-buttons}">
-                    <DockPanel>
-                        <Image Source="/images/icon/bookList.png" Width="32" OpacityMask="White"/>
-                        <Label Content="Kitap Listesi" Foreground="White"/>
-                    </DockPanel>
-                </Button>
-
-                <Button Height="50" Style="{DynamicResource menu-buttons}">
-                    <DockPanel>
-                        <Image Source="/images/icon/memberList.png" Width="32" OpacityMask="White"/>
-                        <Label Content="Okuyucu Listesi" Foreground="White"/>
-                    </DockPanel>
-                </Button>
-
-                <Button Height="50" Style="{DynamicResource menu-buttons}">
-                    <DockPanel>
-                        <Image Source="/images/icon/books.png" Width="32" OpacityMask="White"/>
-                        <Label Content="Emanet Listesi" Foreground="White"/>
-                    </DockPanel>
-                </Button>
-
-                <Button Height="50" Style="{DynamicResource menu-buttons}">
-                    <DockPanel>
-                        <Image Source="/images/icon/bookList.png" Width="32" OpacityMask="White"/>
-                        <Label Content="Zamanı Dolanlar" Foreground="White"/>
-                    </DockPanel>
-                </Button>
-
-                <Button Height="50" Style="{DynamicResource menu-buttons}">
-                    <DockPanel>
-                        <Image Source="/images/icon/overdueItems.png" Width="32" OpacityMask="White"/>
-                        <Label Content="Hakkında" Foreground="White"/>
-                    </DockPanel>
-                </Button>
-                <Image Source="/images/windows/windowBottom.png" />
-
-                <Canvas >
-                    <Border Canvas.Left="72"  Background="#99053D76" CornerRadius="10,10,10,10">
-                        <Label Content="10.0.0.1" Foreground = "White" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
-                    </Border>
-                </Canvas>
-            </StackPanel>
+        <!--Content-->
+        <Border Grid.Column="1" Grid.Row="1" Background="Gray" >
+            <Grid x:Name="ContentArea"/>
         </Border>
-        
 
     </Grid>
-</Window>
+
+
+    </Window>
