--- a/LibraryManagment/Views/UserControls/BookList.xaml
+++ b/LibraryManagment/Views/UserControls/BookList.xaml
@@ -20,8 +20,7 @@
 
         <Border Background="White" Grid.Row="1">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                <Button Style="{DynamicResource userControllerAddBook}" Content="Kitap Ekle" Click="Button_Click"/>
-                <Button Style="{DynamicResource userControllerAddBook}" Content="Kitap Ekle" Click="Button_Click"/>
+                <Button x:Name="btn_addBook" Style="{DynamicResource userControllerAddBook}" Content="Kitap Ekle"  Click="btn_addBook_Click"/>
 
             </StackPanel>
         </Border>
